# libjson

./: .clang-format  .gitignore  .gitingore  .gitmodules  CMakeLists.txt  compile_commands.json  readme.md
.cache/clangd/index/: main.cpp.B24B8EA02D0F7017.idx  parser.cpp.78C0B95CE24A1F71.idx  parser.h.76610F3FEBDC4771.idx
.github/workflows/: cmake-build.yml
benchmark/: CMakeLists.txt
benchmark/cases/: get_number.bench.cpp  lexer.bench.cpp  main.bench.cpp  parse.bench.cpp  reg.h
data/: house-price.json  iris.json  mtcars.json  test.json  titanic.json  twitter.json  weather.json
data/json-checker/: fail26.json  fail31.json  pass1.json
lib/: CMakeLists.txt
lib/src/libjson/: concepts.h  exceptions.h  json-array.cpp  json-array.h  json-null.h  json-number.h  json-object.cpp  json-object.h  json-types.cpp  json-types.h  json-value-types.h  json-value.cpp  json-value.h  lexer.cpp  lexer.h  object.cpp  object.h  parse.cpp  parse.h  parser.cpp  parser.h  token-types.h  token.h  token_types.h  tokenizer.cpp  tokenizer.h
playground/: CMakeLists.txt
playground/src/: main.cpp  types.h
test/: CMakeLists.txt
test/cases/: json-array.test.cpp  json-checker.test.cpp  json-number.test.cpp  json-object.test.cpp  json-value.test.cpp  lexer.test.cpp  lexer_literal.test.cpp  lexer_literal_test.cpp  lexer_numbers.test.cpp  lexer_numbers_test.cpp  lexer_object.test.cpp  lexer_object_test.cpp  lexer_separator.test.cpp  lexer_separator_test.cpp  lexer_strings.test.cpp  lexer_strings_test.cpp  lexer_test.cpp  parse_array.test.cpp  parse_number.test.cpp  parse_object.test.cpp  parse_value.test.cpp  parser.test.cpp  parser_test.cpp  some_test.cpp
